	and make it work as a plug-in, temporary registered as "Print (GDI)"
	
	* plug-ins/postscript/* copied mainly from app/* :
	* plug-ins/postscript/postscript.c : register Dia's formerly built-in
	PS filters as plug-in, so they can be switched off when obsoleted by
	cairo or the user does not want them, printing temporary registered as
	"Print (PS)"

	* objects/standard/outline.c : don't try to render a bezier with 0 points

2008-05-10  Hans Breuer  <hans@breuer.org>

	* objects/standard/outline.c(move_handle) : initial implementation
	* objects/Misc/measure.c : object position should be start point

	* lib/widget.c(DiaSizeSelector): initialize static variable, avoid
	division by zero, don't compare floating points for identiy; together
	fixing bug #479591

	* lib/font.c(dia_font_get_sizes) : use the maximum width of logical-
	and ink-rect to make the always glyphs fit the bounding box. Probably
	fixes bug #455651 but needs checking with DiaRenderer using Freetype.

	* lib/diagramdata.c(layer_update_extents) : don't consider empty 
	objects for the overall extents. Fixes bug #531687 and lowers
	priority of bug #99375.
	
	* plug-ins/wmf/wmf.cpp : don't assume pango_context_load_font() can not
	fail. It does for font descriptions pointing to fonts not available
	on the particular system.

	* lib/text.c(text_calc_boundingbox) : the bounding box did include one
	descent too much, which caused wrong placement for "Standard - Text"
	which calculates the vertical text positioning from the bounding box.
	Fixes bug #528642 but not bug #438020.

	* lib/grid.c(grid_draw_*_lines) : the major lines were sometimes off
	by one due to rounding problems. Fixes bug #382212.

	* objects/standard/outline.c : forgot to call update_data after copy

	* objects/Misc/measure.c objects/Misc/pixmaps/measure.xpm
	  objects/Misc/libmisc.c objects/Misc/Makefile.am objects/makefile.msc
	  sheets/Misc.sheet.in : a new object to measure and show the distance
	between two connection points.
