@@ -1,6 +1,6 @@
 # Remember to also add subdirs in configure.in
 SUBDIRS = cgm cairo pstricks hpgl wpg svg shape dxf python xfig \
-	  wmf metapost xslt pixbuf gprint pgf vdx
+	  wmf metapost xslt pixbuf gprint pgf vdx postscript
 
 EXTRA_DIST = \
 	makefile.msc objects.def
