@@ -5,16 +5,16 @@ freetype_files =
 endif
 
 plugin_sources = \
+	postscript.c \
 	diapsrenderer.h \
 	diapsrenderer.c \
-	$(freetype_files) \
 	$(freetype_files) \
 	paginate_psprint.c \
 	paginate_psprint.h \
 	render_eps.c \
 	render_eps.h
 
-pkglib_LTLIBRARIES = libcairo_filter.la
+pkglib_LTLIBRARIES = libpostscript_filter.la
 
 EXTRA_DIST = \
 	win32print.c \
@@ -26,7 +26,7 @@ libpostscript_filter_la_LDFLAGS = -export-dynamic -module -avoid-version
 
 libpostscript_filter_la_LIBADD =
 if WITH_FREETYPE
-libpostscript_filter_la_LIBADD = $(FREETYPE_LIBS)
+libpostscript_filter_la_LIBADD += $(FREETYPE_LIBS)
 endif
 
 INCLUDES = -I$(srcdir)/../../lib $(GTK_CFLAGS) $(DEBUG_FLAGS) $(CAIRO_CFLAGS)
