@@ -15,6 +15,10 @@
 	cairo or the user does not want them, printing temporary registered as
 	"Print (PS)"
 
+	* postscript/paginate_psprint.c(diagram_print_ps) : filename handling
+	* configure.in plug-ins/Makefile.am plug-ins/postscript/Makefile.am
+	  plug-ins/postscript/postscript.c : build the plug-in and ...
+	
 	* objects/standard/outline.c : don't try to render a bezier with 0 points
 
 2008-05-10  Hans Breuer  <hans@breuer.org>
